[FIX] wrapwrap min-height

--- a/addons/web/static/src/scss/base_frontend.scss
+++ b/addons/web/static/src/scss/base_frontend.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-flow: column nowrap;
     width: 100%;
+    min-height: 100%;
 
     > * {
         flex: 0 0 auto;
